# rust-nicepay

./: Cargo.toml  README.md
src/: accessToken.rs  config.rs  helper.rs  httpRequest.rs  lib.rs  main.rs  requestDirectDebit.rs  requestPayout.rs  requestQR.rs  requestVacct.rs
src/model/: approvePayoutModel.rs  cancelPayoutModel.rs  checkBalanceModel.rs  createDirectDebitModel.rs  createVacctModel.rs  deleteVacctModel.rs  generateQRModel.rs  inquiryDirectDebitModel.rs  inquiryPayoutModel.rs  inquiryVacctModel.rs  queryQRModel.rs  refundDirectDebitModel.rs  refundQRModel.rs  registerPayoutModel.rs  rejectPayoutModel.rs
src/models/: mod.rs
src/models/snap/: approve_payout_model.rs  cancel_payout_model.rs  cancel_vacct_model.rs  check_balance_payout_model.rs  check_status_direct_debit_model.rs  create_vacct_model.rs  generate_qr_model.rs  inquiry_payout_model.rs  inquiry_vacct_model.rs  mod.rs  query_qr_model.rs  refund_direct_debit_model.rs  refund_qr_model.rs  regist_direct_debit_model.rs  regist_payout_model.rs  reject_payout_model.rs
src/models/v1/: cancel_direct_model.rs  inquiry_direct_model.rs  migs_request.rs  mod.rs  one_pass_token.rs  regist_direct_model.rs  regist_redirect_model.rs  secure_ve_request.rs
src/models/v2/: approve_payout_model.rs  cancel_direct_model.rs  cancel_payout_model.rs  check_balance_payout_model.rs  inquiry_direct_model.rs  inquiry_payout_model.rs  mod.rs  payment_direct_model.rs  regist_direct_model.rs  regist_payout_model.rs  regist_redirect_model.rs  reject_payout_model.rs
src/services/: mod.rs
src/services/snap/: mod.rs  request_access_token.rs  request_direct_debit.rs  request_payout.rs  request_qr.rs  request_vacct.rs
src/services/v1/: mod.rs  request_direct.rs  request_redirect.rs
src/services/v2/: mod.rs  request_direct.rs  request_payout.rs  request_redirect.rs
src/utils/: config.rs  helper.rs
tests/services/snap/: request_access_token_test.rs  request_vacct_test.rs
tests/services/v1/: request_cancel.rs  request_check_status.rs  request_direct_test.rs  request_one_pass_token.rs  request_redirect_test.rs  secure_ve_request.rs
